[package]
name = "crescent"
version = "0.1.0"
authors = ["Will Usher <willusher.life@gmail.com>"]
build = "build.rs"

[dependencies]
#embree-rs = "0.3.2"
embree-rs = { path="../embree-rs" }
#ispc = "1.0.4"
ispc = {path="../ispc-rs"}
tobj = "0.1.6"
image = "0.20.1"
cgmath = "0.16.1"
docopt = "1.0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rayon = "1.0.3"

[build-dependencies]
#ispc = "1.0.4"
ispc = {path="../ispc-rs"}

